admin.txt
>>> from app import db
>>> from app.models import User
>>> u=User.query.filter_by(username="admin).first()
  File "<console>", line 1
    u=User.query.filter_by(username="admin).first()
                                    ^
SyntaxError: unterminated string literal (detected at line 1)
>>> u= User.query.filter_by(username="admin").first()
>>> u.is_admin = True
>>> db.session.commit()
>>> print(u.is_admin, u.role)
True admin
>>>